# ConstrainedRobustBench

./: .gitignore  README.md  attributions.py  console_ctu_all_no_constraints.txt  console_url_RLN.txt  constrained_robustbench.yml  eval.py  insights.py  log_ctu.txt  log_file.txt  log_lcld.txt  log_url.txt  pyproject.toml  requirements.txt  train.py  train_bis.sh  trainall.sh  transfer.sh
Cautoattack/: autoattack.py  autopgd_base.py  checks.py
autoattack/: Cautoattack.py  __init__.py  autopgd_base.py  checks.py  fab_base.py  fab_pt.py  other_utils.py  utils_tf2.py
config/: adult.yml  california_housing.yml  covertype.yml  ctu_13_neris.yml  heloc.yml  higgs.yml  lcld_v2_time.yml  malware.yml  url.yml  wids.yml
constraints/: constraints_checker.py  constraints_executor.py
ctu_13_neris/: hp_log.txt  results.txt
jobs/: DeepFM_ctu_13.sh  DeepFM_lcld_v2_time.sh  DeepFM_malware.sh  DeepFM_url.sh  DeepFM_wids.sh
lcld_v2_time/: hp_log.txt  results.txt
logs/: TabTransformer_ctu13-465595.out  TabTransformer_malware-465594.out  TabTransformer_url-465593.out
models/: basemodel_torch.py  deepfm.py  mlp_rln.py  saint.py  tabtransformer.py  vime.py
pipeline/: data-augmentation.py  eval_ML.py  pytorch.py  wids.py
results/: aa_custom_1_1000_eps_0.03137.pth
results_antoine2/: crobustbench_393390.out  crobustbench_393392.out  crobustbench_393393.out  crobustbench_393394.out  crobustbench_393395.out  crobustbench_393396.out  crobustbench_393405.out  crobustbench_393406.out  crobustbench_393407.out  crobustbench_393408.out  crobustbench_393410.out  crobustbench_393412.out  (+12 more)
(+188 files in other folders)
