[tool.poetry]
name = "constrainedrobustbench"
version = "0.1.0"
description = ""
authors = ["Antoine Desjardins <44445863+boumpteryx@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
constrained-attacks = { path = "../constrained-attacks/", develop = true }
torch=  ">1.7.1"
torchvision=">0.8.2"
requests="~2.25.1"
numpy=">1.19.4"
Jinja2="~3.1.2"
#tqdm="~4.56.1"
#pandas="~1.2.0"
autoattack = { git = "https://github.com/fra31/auto-attack.git", rev = "6482e4d6fbeeb51ae9585c41b16d50d14576aadc" }
torchdiffeq = "^0.2.3"
geotorch = "^0.3.0"
scikit-learn = "^1.1.2"
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
